src/test/ui/borrowck/borrowck-move-error-with-note.stderr
error[E0507]: cannot move out of `f.0` which is behind a shared reference
  --> $DIR/borrowck-move-error-with-note.rs:11:11
   |
LL |     match *f {
   |           ^^ help: consider borrowing here: `&*f`
LL |         Foo::Foo1(num1,
   |                   ---- data moved here
LL |                   num2) => (),
   |                   ---- ...and here
LL |         Foo::Foo2(num) => (),
   |                   --- ...and here
   |
note: move occurs because these variables have types that don't implement the `Copy` trait
  --> $DIR/borrowck-move-error-with-note.rs:12:19
   |
LL |         Foo::Foo1(num1,
   |                   ^^^^
LL |                   num2) => (),
   |                   ^^^^
LL |         Foo::Foo2(num) => (),
   |                   ^^^

error[E0509]: cannot move out of type `S`, which implements the `Drop` trait
  --> $DIR/borrowck-move-error-with-note.rs:28:11
   |
LL |     match (S {f: "foo".to_string(), g: "bar".to_string()}) {
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot move out of here
...
LL |             f: _s,
   |                -- data moved here
LL |             g: _t
   |                -- ...and here
   |
note: move occurs because these variables have types that don't implement the `Copy` trait
  --> $DIR/borrowck-move-error-with-note.rs:31:16
   |
LL |             f: _s,
   |                ^^
LL |             g: _t
   |                ^^

error[E0507]: cannot move out of `a.a` which is behind a shared reference
  --> $DIR/borrowck-move-error-with-note.rs:46:11
   |
LL |     match a.a {
   |           ^^^ help: consider borrowing here: `&a.a`
LL |         n => {
   |         -
   |         |
   |         data moved here
   |         move occurs because `n` has type `std::boxed::Box<isize>`, which does not implement the `Copy` trait

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0507, E0509.
For more information about an error, try `rustc --explain E0507`.
